# SSD_TF_SKRIPSI

./: .gitignore  readme_ssd_vgg.txt  setup.cfg  ssd_tf_env.yml
Workspace/code/: augmentator.py  hasil_note  model_load.py  model_save.py  setup.cfg  ssd_infer.py  ssd_loss.py  ssd_train.py
Workspace/code/logs/mobilenet_v2/20231027-190738/train/: events.out.tfevents.1698408459.AssassinsCreed.12755.0.v2
Workspace/code/logs/mobilenet_v2/20231027-190903/train/: events.out.tfevents.1698408544.AssassinsCreed.12862.0.v2
Workspace/code/logs/mobilenet_v2/20231027-190903/validation/: events.out.tfevents.1698408595.AssassinsCreed.12862.1.v2
Workspace/code/logs/mobilenet_v2/20231028-072152/train/: events.out.tfevents.1698452513.AssassinsCreed.27820.0.v2
Workspace/code/logs/mobilenet_v2/20231028-072152/validation/: events.out.tfevents.1698452558.AssassinsCreed.27820.1.v2
Workspace/code/logs/mobilenet_v2/20231028-081530/train/: events.out.tfevents.1698455730.AssassinsCreed.30143.0.v2
Workspace/code/logs/mobilenet_v2/20231028-081530/validation/: events.out.tfevents.1698455770.AssassinsCreed.30143.1.v2
Workspace/code/logs/mobilenet_v2/20231028-103742/train/: events.out.tfevents.1698464262.AssassinsCreed.5603.0.v2
Workspace/code/logs/vgg16/20230722-203321/train/: events.out.tfevents.1690032805.Iqbal-Lepi.863.0.v2
Workspace/code/models/: decoder.py  prediction_head.py  ssd_mobilenet_v2.py  ssd_vgg16_architecture.py
Workspace/code/utils/: bbox_utils.py  data_utils.py  draw_utils.py  eval_utils.py  firebase_utils.py  io_utils.py  s  tf_record_utils.py  train_utils.py
(+343 files in other folders)
