[metadata]
name = SSD_VGG_TF_SKRIPSI
description = ...
author = Muhammad Iqbal
license = MIT
license_files = LICENSE
platforms = win32
classifiers = Programming Language :: Python :: 3.9

[options]
packages = 
    models
    utils
install_requires = 
    pillow>=10.0.0
    tensorflow==2.13.0
python_requires = >= 3.9
packages_dir =
    =Workspace/code/models
    =Workspace/code/utils
zip_safe = no

[options.packages.find]
where=code