[metadata]
name = SSD_VGG_TF_SKRIPSI
description = ...
author = Muhammad Iqbal
license = MIT
license_files = LICENSE
platforms = win32
classifiers = Programming Language :: Python :: 3.9

[options]
packages = 
    models
    utils
python_requires = >= 3.9
package_dir =
    =Workspace/code
    =Workspace/code
zip_safe = no

[options.packages.find]
where=code